[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 1

[node name="LabelTitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 245.0
margin_right = 1024.0
margin_bottom = 259.0
text = "Yugi Duel Online"
align = 1

[node name="ButtonLogin" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 263.0
margin_right = 1024.0
margin_bottom = 283.0
text = "Đăng nhập / Guest"

[node name="ButtonPlay" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 287.0
margin_right = 1024.0
margin_bottom = 307.0
text = "Chơi Ngay"

[node name="ButtonDeck" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 311.0
margin_right = 1024.0
margin_bottom = 331.0
text = "Deck Editor"

[node name="ButtonSettings" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 1024.0
margin_bottom = 355.0
text = "Cài đặt"

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -30.0
text = "Not logged in"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonDeck" to="." method="_on_ButtonDeck_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonSettings" to="." method="_on_ButtonSettings_pressed"]
